// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Employee: Table to store employee information in the hotel
Hotel: Table to store hotel branches
Guest: Table to store guest information
MaintenanceRequest: Table to store maintenance requests for rooms
Room: Table to store rooms available in the hotel
Payment: Table to store payment details for reservations
Reservation: Table to store reservation details
ReservationService: Table to link reservations with services
Service: Table to store services offered by the hotel
'''
}

Table Employee {
    id INTEGER [primary key]
    hotel_id INTEGER 
    first_name VARCHAR(50) 
    last_name VARCHAR(50) 
    role VARCHAR(50) 
    salary INTEGER 
    }

Table Hotel {
    id INTEGER [primary key]
    name VARCHAR(100) 
    address VARCHAR(200) 
    contact_number VARCHAR(15) 
    }

Table Guest {
    id INTEGER [primary key]
    first_name VARCHAR(50) 
    last_name VARCHAR(50) 
    phone_number VARCHAR(15) 
    email VARCHAR(100) 
    }

Table MaintenanceRequest {
    id INTEGER [primary key]
    room_id INTEGER 
    description VARCHAR(200) 
    status VARCHAR(50) 
    request_date DATE 
    }

Table Room {
    id INTEGER [primary key]
    hotel_id INTEGER 
    number VARCHAR(10) 
    Type VARCHAR(50) 
    price_per_night INTEGER 
    }

Table Payment {
    id INTEGER [primary key]
    reservation_id INTEGER 
    amount INTEGER 
    date DATE 
    method VARCHAR(50) 
    }

Table Reservation {
    id INTEGER [primary key]
    guest_id INTEGER 
    room_id INTEGER 
    check_in_date DATE 
    check_out_date DATE 
    total_amount INTEGER 
    }

Table ReservationService {
    id INTEGER [primary key]
    reservation_id INTEGER 
    service_id INTEGER 
    }

Table Service {
    id INTEGER [primary key]
    name VARCHAR(100) 
    price INTEGER 
    }



// Relationships
    Ref: Employee.(hotel_id) < Hotel.(id)
    Ref: MaintenanceRequest.(room_id) < Room.(id)
    Ref: Room.(hotel_id) < Hotel.(id)
    Ref: Payment.(reservation_id) < Reservation.(id)
    Ref: Reservation.(guest_id) < Guest.(id)
    Ref: Reservation.(room_id) < Room.(id)
    Ref: ReservationService.(reservation_id) < Reservation.(id)
    Ref: ReservationService.(service_id) < Service.(id)
